# slac-db

./: .gitattributes  pyproject.toml
.github/workflows/: tests.yml
slac_db/: __init__.py  aida.py  config.py  db_to_yaml.py  device.py  directory_service.py  dn_dict.py  generate.py  io.py  oracle.py  oracle_remote.py
slac_db/create/: __init__.py  combined.py  lcls_elements.py  lcls_elements_csv.py  local.py  meme_names.py  test.py
slac_db/package_data/: accessor_names.yaml  aida_pvs.sqlite3  device.sqlite3  directory_service_pvs.sqlite3  lcls_elements.sqlite3  wire_metadata.yaml
slac_db/package_data/yaml/: BC1.yaml  BYP.yaml  COL1.yaml  DIAG0.yaml  DL1.yaml  DOG.yaml  EMIT2.yaml  HTR.yaml  L3.yaml  LI27.yaml  LI28.yaml  LTUH.yaml  LTUS.yaml  SPD.yaml
slac_db/yaml/: BC1.yaml  BC2.yaml  BYP.yaml  COL1.yaml  DIAG0.yaml  DL1.yaml  DOG.yaml  EMIT2.yaml  HTR.yaml  L3.yaml  LI27.yaml  LTUH.yaml  LTUS.yaml  SPD.yaml
tests/: test_aida.py  test_combined.py  test_db_to_yaml.py  test_device.py  test_directory_service.py  test_dn_dict.py  test_io.py  test_oracle.py
tests/test_data/: CQ01B_accessors.yaml  DIAG0.yaml  example.db  expected_areas.csv  expected_beampaths.csv  test_io.yaml
